# 2DVideo

./: .gitignore  README.md  kids-channel-build-spec (1).md  pyproject.toml  run_ui.py
New Folder/: Fruit_Character_Voice_Bible.md  Fruit_Master_Production_Workflow.md  Local_Setup_7900XTX_Linux.md  Video Master Prompt.txt
config/: shared_character_catalog.json
config/characters/: appy.json  berry.json  char_01_bunny.json  char_01_girl.json  char_02_fox.json  char_03_bear.json  char_04_cat.json  char_05_owl.json  coco.json  grapey.json  kiwi.json  mango.json  mellie.json  nana.json  ozzy.json  pappy.json  pinny.json  registry.json
config/episode_templates/: poem_template.json  story_template.json
config/voices/: voice_registry.json
pipeline/: 01_story_engine.py  02_asset_check.py  02b_guest_character_gen.py  03_tts.py  04_rig_render.py  04_scene_gen.py  05_broll_gen.py  06_animatediff.py  06_upscale.py  07_assemble.py  __init__.py  assembly.py  backgrounds.py  bootstrap.py  character_store.py  common.py  import_character_sheet.py  ltx_gen.py  media.py  orchestrator.py  progress.py  prompt_engine.py  rendering.py  sd_client.py  story.py  test_episode.py
prompt_bibles/: Character_Naming_Convention.md  Fruit_Character_Acting_Guide.md  Fruit_Character_Bible.md  Fruit_Environment_Bible.md  Local_Prompt_Generator_System_Prompt.md  README.md
schemas/: character.schema.json  episode.schema.json  registry.schema.json  voice_registry.schema.json
tools/: generate_shared_character_portraits.py  prompt_generator.py
ui/: __init__.py  app.py
