[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2dvideo"
version = "0.1.0"
description = "Local pipeline for automated kids animation episodes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
  "numpy>=1.26",
  "Pillow>=10.0",
  "opencv-python>=4.9",
  "coqui-tts>=0.27",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "ui*"]
